# rust-temp-api

./: .gitignore  Cargo.toml  Dockerfile  create_cert.sh  main.rs
