[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
env_logger = "0.11.5"
log = "0.4.22"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }

[[bin]]
name = "test-api"
path = "main.rs"